--- a/TargetLiveWallpaper/res/values/strings.xml
+++ b/TargetLiveWallpaper/res/values/strings.xml
@@ -43,7 +43,5 @@
     <string name="target_settings_pulse_number_title">Number of rings to display</string>
     <string name="target_settings_pulse_number_summary">Number of rings to display</string>
     <string name="target_settings_pulse_width_title">Width of pulse rings</string>
-    <string name="target_settings_pulse_width_summary">How wide?</string>
-    <string name="target_settings_pulse_color_title">Pulse color</string>
-    <string name="target_settings_pulse_color_summary">Which color for pulse</string>
+    <string name="target_settings_pulse_width_summary">How wide</string>
 </resources>
