--- a/TargetLiveWallpaper/res/values/strings.xml
+++ b/TargetLiveWallpaper/res/values/strings.xml
@@ -34,10 +34,10 @@
     <string name="target_settings_summary">Choose whitch graphics to display ...</string>
     <string name="target_wallpaper_service_label">Target Live Wallpaper</string>
     <string name="target_settings_left_summary">Select whether to track vertical with 3D graphics</string><string name="target_settings_left_on_summary">Track LHS.</string><string name="target_settings_left_off_summary">Don\'t track LHS.</string><string name="target_settings_left_title">Track along LHS?</string><string name="target_settings_top_summary">Select whether to track horizontal with 3D graphics</string><string name="target_settings_top_on_summary">Track top.</string><string name="target_settings_top_off_summary">Don\'t track top.</string><string name="target_settings_top_title">Track along top?</string><string name="target_settings_disc_summary">Select whether to display rotating discs</string><string name="target_settings_disc_on_summary">Display rotating discs.</string><string name="target_settings_disc_off_summary">Don\'t display disc.</string><string name="target_settings_disc_title">Display rotating discs?</string><string name="target_settings_quad_summary">Select whether to display quad spinning objects</string><string name="target_settings_quad_on_summary">Display quad targets.</string><string name="target_settings_quad_off_summary">Don\'t display quad targets.</string><string name="target_settings_quad_title">Display quad spinning objects?</string><string name="target_settings_pulse_summary">Select whether to display pulse target</string><string name="target_settings_pulse_on_summary">Display pulse target.</string><string name="target_settings_pulse_off_summary">Don\'t display pulse targets.</string><string name="target_settings_pulse_title">Display pulse target?</string>
-    <string name="target_settings_mouse_title">Display \'mouse pointer\'</string>
-    <string name="target_settings_mouse_summary">Select whether to display \'mouse cursor\'</string>
-    <string name="cursor_settings_title">Select cursor:</string>
-    <string name="cursor_settings_summary">Select from various open source cursors</string>
+    <string name="target_settings_mouse_title">Display static targets</string>
+    <string name="target_settings_mouse_summary">Select whether to display a static target</string>
+    <string name="cursor_settings_title">Select target:</string>
+    <string name="cursor_settings_summary">Select from various \'targets\'</string>
     <string name="target_settings_pulse_category_title">Pulsing target settings</string>
     <string name="target_settings_pulse_category_summary">Pulse config, number, width, etc</string>
     <string name="target_settings_pulse_number_title">Number of rings to display</string>
@@ -50,6 +50,10 @@
     <string name="target_settings_3d_summary">Display settings for 3D objects</string>
     <string name="target_settings_animated_title">Animated Target settings</string>
     <string name="target_settings_animated_summary">Settings for animated targets</string>
-    <string name="target_settings_disctype_title">Color or style of animated discs</string>
+    <string name="target_settings_disctype_title">Color of animated discs</string>
     <string name="target_settings_disctype_summary">Color for animated targets</string>
+    <string name="target_settings_dpulse_title">Shift color of 3d trackers</string>
+    <string name="target_settings_dpulse_summary">Shuould I pulsate colors</string>
+    <string name="target_settings_dpulse_off_summary">Don\'t pulse - green</string>
+    <string name="target_settings_dpulse_on_summary">Pulse - red</string>
 </resources>
