enhancements to flares: now using custom colors, timing and angles (should be curve, but looks better than nothing for now).

--- a/TargetLiveWallpaper/res/values/strings.xml
+++ b/TargetLiveWallpaper/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="searchText">&quot;Lets see what a search for \&quot;Target Live Wallpaper\&quot; shows up:&quot;</string>
     <string name="target_wallpaper_application_label">App Label - TLP</string>
     <string name="target_wallpaper_activity_label">Activity - TLP</string>
+    <string name="activity_other_apps">Other Apps byt PDi</string>
     
     
 </resources>
